<resources>
    <string name="app_name">Note&amp;TimePlanner</string>
    <string name="title_task">Trang chủ</string>
    <string name="title_person">Cá Nhân</string>
    <string name="title_calendar">Lịch</string>
    <string name="new_task">Công việc</string>
    <string name="title">Tiêu đề</string>
    <string name="detail_task">Mô tả</string>
    <string name="estimate_day">Ngày</string>
    <string name="date_selected">%1$s-%2$s-%3$s</string>
    <string name="time_picker">%1$s:%2$s%3$s</string>
    <string name="date_display">%1$s</string>
    <string name="sign_in">Bấm để đăng nhập</string>
    <string name="manage_category">Quản lý danh mục</string>
    <string name="filter_by_day">Hôm nay</string>
    <string name="search">Tìm kiếm</string>
    <string name="delete">Xoá</string>
    <string name="update">Chỉnh sửa</string>
    <string name="title_pick_category">Chọn loại danh mục</string>
    <string name="member_number">(%d)</string>
    <string name="forgot_password"><u>Quên mật khẩu?</u></string>
    <string name="hello_user">Xin chào,\n%s</string>

    <string name="action_today">Hôm Nay</string>
    <string name="action_cancel">Trở về</string>
    <string name="action_select">Chọn</string>

    <string name="prime_date_picker_selected_day">Ngày đã chọn</string>
    <string name="prime_date_picker_from">Bắt Đầu</string>
    <string name="prime_date_picker_to">Kết Thúc</string>
    <string name="no_range_is_selected">Vui lòng chọn cả ngày bắt đầu và kết thúc!</string>
    <string name="no_day_is_selected">Không có ngày nào được chọn!</string>
    <string name="board">Bảng</string>
    <string name="text_done">Hoàn thành</string>
    <string name="text_todo">Thực hiện</string>
    <string name="text_expire">Quá hạn</string>
    <string name="day_quote">%1$s,\n%2$s %3$s</string>
    <string name="pick_time">Chọn thời gian</string>
    <string name="numb_of_task">%d công việc</string>

    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
    <string name="gallery_title">Thư viện</string>
    <string name="camera_title">Camera</string>
    <string name="number_of_group_tasks">%d việc</string>
    <string name="start_to_end_group_task">%s to %s</string>
</resources>