<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cslItemTask"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_16"
    android:background="@drawable/bg_item_task"
    android:padding="@dimen/dp_8">

    <ImageView
        android:id="@+id/ivCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:background="@drawable/bg_image_item_task"
        android:backgroundTint="@color/light_green"
        android:padding="@dimen/dp_10"
        android:src="@drawable/ic_bicycle"
        app:layout_constraintBottom_toBottomOf="@+id/tvEstDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitleTask"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTitleTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_12"
        android:background="@color/transparent"
        android:ellipsize="end"
        android:fontFamily="@font/opensans_bold"
        android:maxLines="1"
        android:text="Cong viec"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toStartOf="@+id/tvStateTask"
        app:layout_constraintStart_toEndOf="@id/ivCategory"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_solid_white"
        android:backgroundTint="@color/light_green"
        android:fontFamily="@font/opensans_medium"
        android:paddingHorizontal="@dimen/dp_8"
        android:paddingVertical="@dimen/dp_2"
        android:text="@string/text_done"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitleTask" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:text="Coding"
        android:textColor="@color/dolphin_gray"
        app:layout_constraintStart_toStartOf="@id/tvTitleTask"
        app:layout_constraintTop_toBottomOf="@id/tvTitleTask" />

    <TextView
        android:id="@+id/tvEstDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:drawablePadding="@dimen/dp_4"
        android:fontFamily="@font/opensans_semibold"
        android:gravity="center"
        android:text="@string/date_display"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        app:drawableStartCompat="@drawable/ic_calendar_uncheck"
        app:drawableTint="@color/orange_crayola"
        app:layout_constraintStart_toStartOf="@id/tvCategory"
        app:layout_constraintTop_toBottomOf="@id/tvCategory" />

    <TextView
        android:id="@+id/tvTimeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:drawablePadding="@dimen/dp_4"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/time_picker"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        app:drawableStartCompat="@drawable/ic_timer"
        app:drawableTint="@color/orange_crayola"
        app:layout_constraintBottom_toBottomOf="@id/tvEstDay"
        app:layout_constraintStart_toEndOf="@id/tvEstDay"
        app:layout_constraintTop_toTopOf="@id/tvEstDay" />

</androidx.constraintlayout.widget.ConstraintLayout>