<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_task">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:src="@drawable/ic_arrow_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/new_task"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_18" />

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/dp_16"
                android:src="@drawable/ic_apply"
                tools:ignore="ContentDescription" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_container_add_task"
                android:elevation="@dimen/dp_6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="@font/opensans_bold"
                    android:hint="@string/title"
                    android:minHeight="@dimen/dp_50"
                    android:paddingHorizontal="@dimen/dp_12"
                    android:paddingTop="@dimen/dp_8"
                    android:textColor="@color/lynch_gray"
                    android:textColorHint="@color/lynch_gray"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:fontFamily="sans-serif"
                    android:gravity="top"
                    android:hint="@string/detail_task"
                    android:inputType="text|textMultiLine"
                    android:minHeight="@dimen/dp_102"
                    android:paddingHorizontal="@dimen/dp_12"
                    android:paddingVertical="@dimen/dp_10"
                    android:textColor="@color/lynch_gray"
                    android:textColorHint="@color/lynch_gray"
                    app:layout_constraintTop_toBottomOf="@id/edtTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_container_add_task"
                android:elevation="@dimen/dp_6"
                android:padding="@dimen/dp_16"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp_10"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="@string/estimate_day"
                    app:drawableStartCompat="@drawable/ic_calendar_check"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEstimate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/opensans_bold"
                    android:text="28/10/2023 - 28/12/2023"
                    android:textColor="@color/lynch_gray"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_16"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:drawablePadding="@dimen/dp_10"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="Thời gian"
                    app:drawableStartCompat="@drawable/ic_timer"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:text="19:00 PM"
                    android:textColor="@color/lynch_gray"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_16"
                    app:layout_constraintTop_toBottomOf="@id/tvTimer" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:drawablePadding="@dimen/dp_10"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="Nhãn"
                    app:drawableStartCompat="@drawable/ic_label"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@id/divider2" />

                <TextView
                    android:id="@+id/tvLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_container_add_task"
                    android:fontFamily="@font/opensans_bold"
                    android:paddingHorizontal="@dimen/dp_16"
                    android:paddingVertical="@dimen/dp_4"
                    android:text="Nghiên cứu"
                    android:textColor="@color/lynch_gray"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_16"
                    app:layout_constraintTop_toBottomOf="@id/tvLabel" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:drawablePadding="@dimen/dp_10"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="Tập tin đính kèm"
                    app:drawableStartCompat="@drawable/ic_attach_file"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@id/divider3" />

                <TextView
                    android:id="@+id/tvAddFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="THÊM"
                    android:textColor="@color/lynch_gray"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    app:layout_constraintEnd_toEndOf="@+id/tvAddFile"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@id/tvAddFile" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginVertical="@dimen/dp_16"
                android:background="@drawable/bg_container_add_task"
                android:elevation="@dimen/dp_6"
                android:padding="@dimen/dp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp_10"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="Nhiệm vụ phụ"
                    app:drawableStartCompat="@drawable/ic_add"
                    app:drawableTint="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAddSubTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    tools:listitem="@layout/item_sub_task" />

                <TextView
                    android:id="@+id/tvAddSubTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="THÊM"
                    android:textColor="@color/lynch_gray"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>